tests/artifacts/perf/2026-06-02-interpolate-griddata/baseline_griddata_linear_clean_head_rch.txt
  [2m2026-06-02T17:36:19.455663Z[0m [33m WARN[0m [1;33mrch::hook[0m[33m: [33mProject path normalization failed for /data/tmp/frankenscipy-griddata-baseline-d5725e14: input resolves outside canonical root (input: /data/tmp/frankenscipy-griddata-baseline-d5725e14, detail: resolved=/data/tmp/frankenscipy-griddata-baseline-d5725e14 root=/data/projects)[0m
    [2;3mat[0m rch/src/hook.rs:2880 [2;3mon[0m ThreadId(1)

[RCH] local (no admissible workers: insufficient_slots=7,hard_preflight=1)
    Blocking waiting for file lock on build directory
   Compiling proc-macro2 v1.0.106
   Compiling autocfg v1.5.0
   Compiling serde_core v1.0.228
   Compiling libc v0.2.185
   Compiling serde v1.0.228
   Compiling memchr v2.8.0
   Compiling zerocopy v0.8.48
   Compiling crossbeam-utils v0.8.21
   Compiling getrandom v0.3.4
   Compiling getrandom v0.4.2
   Compiling rustix v1.1.4
   Compiling either v1.15.0
   Compiling bitflags v2.11.1
   Compiling regex-syntax v0.8.10
   Compiling rayon-core v1.13.0
   Compiling linux-raw-sys v0.12.1
   Compiling plotters-backend v0.3.7
   Compiling once_cell v1.21.4
   Compiling fastrand v2.4.1
   Compiling ciborium-io v0.2.2
   Compiling clap_lex v1.1.0
   Compiling anstyle v1.0.14
   Compiling same-file v1.0.6
   Compiling quick-error v1.2.3
   Compiling bit-vec v0.8.0
   Compiling fnv v1.0.7
   Compiling cast v0.3.0
   Compiling oorandom v11.1.5
   Compiling unarray v0.1.4
   Compiling anes v0.1.6
   Compiling blake3 v1.8.4
   Compiling walkdir v2.5.0
   Compiling itertools v0.13.0
   Compiling clap_builder v4.6.0
   Compiling num-traits v0.2.19
   Compiling matrixmultiply v0.3.10
   Compiling plotters-svg v0.3.7
   Compiling bit-set v0.8.0
   Compiling crossbeam-epoch v0.9.18
   Compiling quote v1.0.45
   Compiling syn v2.0.117
   Compiling crossbeam-deque v0.8.6
   Compiling approx v0.5.1
   Compiling num-integer v0.1.46
   Compiling num-complex v0.4.6
   Compiling plotters v0.3.7
   Compiling wait-timeout v0.2.1
   Compiling page_size v0.6.0
   Compiling rand_core v0.9.5
   Compiling num-rational v0.4.2
   Compiling rand_xorshift v0.4.0
   Compiling rand v0.9.4
   Compiling rayon v1.12.0
   Compiling simba v0.9.1
   Compiling criterion-plot v0.8.2
   Compiling regex-automata v0.4.14
   Compiling tempfile v3.27.0
   Compiling rusty-fork v0.3.1
   Compiling clap v4.6.1
   Compiling serde_json v1.0.149
   Compiling serde_derive v1.0.228
   Compiling zerocopy-derive v0.8.48
   Compiling nalgebra-macros v0.3.0
   Compiling thiserror-impl v2.0.18
   Compiling regex v1.12.3
   Compiling thiserror v2.0.18
   Compiling fsci-runtime v0.1.0 (/data/tmp/frankenscipy-griddata-baseline-d5725e14/crates/fsci-runtime)
   Compiling tinytemplate v1.2.1
   Compiling nalgebra v0.34.2
   Compiling fsci-fft v0.1.0 (/data/tmp/frankenscipy-griddata-baseline-d5725e14/crates/fsci-fft)
   Compiling half v2.7.1
   Compiling ppv-lite86 v0.2.21
error[E0514]: found crate `cfg_if` compiled by an incompatible version of rustc
  --> /home/ubuntu/.cargo/registry/src/index.crates.io-1949cf8c6b5b557f/half-2.7.1/src/binary16/arch.rs:19:9
   |
19 |           cfg_if::cfg_if! {
   |           ^^^^^^
...
87 | /     convert_fn! {
88 | |         if x86_feature("f16c") {
89 | |             unsafe { x86::f32_to_f16_x86_f16c(f) }
90 | |         } else if aarch64_feature("fp16") {
...  |
97 | |     }
   | |_____- in this macro invocation
   |
   = note: the following crate versions were found:
           crate `cfg_if` compiled by rustc 1.95.0-nightly (7f99507f5 2026-02-19): /data/tmp/cargo-target/release/deps/libcfg_if-d2e636d86701c50e.rmeta
   = help: please recompile that crate using this compiler (rustc 1.98.0-nightly (14210df0e 2026-05-31)) (consider running `cargo clean` first)
   = note: this error originates in the macro `convert_fn` (in Nightly builds, run with -Z macro-backtrace for more info)

For more information about this error, try `rustc --explain E0514`.
error: could not compile `half` (lib) due to 1 previous error
warning: build failed, waiting for other jobs to finish...
RCH_INTERPOLATE_GRIDDATA_CLEAN_HEAD_BASELINE_EXIT:101
